@@ -461,24 +461,24 @@ struct game games[] = {
     GAME_CONNECT | GAME_RCON,
     "Soldier of Fortune 2",
     SOF2S_DEFAULT_PORT,
-    0,
+    SOF2M_DEFAULT_PORT,
     "SOF2S",
     "SOF2S",
     "-sof2s",
     "-sof2m",
     &sof2s_pix,
 
-    q2_parse_player,
+    q3_parse_player,
     quake_parse_server,
-    q2_analyze_serverinfo,
+    q3_analyze_serverinfo,
     config_is_valid_generic,
     NULL,
-    q2_exec_generic,
+    q3_exec,
     NULL,
     quake_save_info,
-    NULL,		// arch_identifier
-    NULL,		// identify_cpu
-    NULL,		// identify_os
+    "version",		// arch_identifier
+    identify_cpu,		// identify_cpu
+    identify_os,		// identify_os
     NULL,		// cmd
     NULL,		// dir
     NULL,		// real_dir
@@ -1586,6 +1586,10 @@ static void q3_analyze_serverinfo (struct server *s) {
       else if(!strncmp(info_ptr[1],"ST:V HM",7))
       {
 	s->type=EF_SERVER;
+      }
+      else if(!strncmp(info_ptr[1],"SOF2MP",6))
+      {
+	s->type=SOF2S_SERVER;
       }
     }
     
