@@ -68,6 +68,7 @@
 #define	D3M_DEFAULT_PORT	3445		/* Descent 3 master */
 #define	EFM_DEFAULT_PORT	27953		/* Elite Force master */
 #define	T2M_DEFAULT_PORT	28000		/* Tribes 2 */
+#define	SOF2M_DEFAULT_PORT	20110		/* Soldier of Fortune 2 */
 
 #define PLAYER_GROUP_MASK	0x07
 #define PLAYER_GROUP_RED	0x01
